--- a/refresh/build.gradle
+++ b/refresh/build.gradle
@@ -28,6 +28,6 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.0'
-    api 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    compileOnly 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     compileOnly 'androidx.recyclerview:recyclerview:1.1.0'
 }
